discussion/kv_engine/179667/179667_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52311: [3/n] Pause / Resume Bucket: ep-engine

Implement pause & resume support in ep-engine.

On pause(), ep-engine waits for all disk writing related tasks to
complete, inhibits any new ones from starting, and then notifies the
KVStoreIface of pause.

On resume() we do the reverse - unpause the KVStore, then allow disk
writing tasks to run again.

Note that support in KVStore for pause/resume() is not yet implemented
- see next patch in sequence.

Change-Id: I9f91ba459edf91c2439ab63760ca9322443ba7bc

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2022-09-07 10:32:37.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-09-07 10:45:46.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20100/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_engine.cc:7035:38: error: use of undeclared identifier "cookie" [clang-diagnostic-error]
    return kvBucket->prepareForPause(cookie);
                                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_engine.cc:7039:39: error: use of undeclared identifier "cookie" [clang-diagnostic-error]
    return kvBucket->prepareForResume(cookie);
                                      ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20100/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_engine.cc:7035:38:
error: use of undeclared identifier "cookie" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20100/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49058/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/ep_engine.cc(7035): error C2065: "cookie": undeclared identifier ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49058/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41243/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/ep_engine.cc:7035:38:
error: use of undeclared identifier "cookie"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41243/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9800/ : FAILURE

Compile error at [2022-09-07T10:37:36.169Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/ep_engine.cc:7035:38:
error: use of undeclared identifier "cookie"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9800/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22064/ : FAILURE

Compile error at [2022-09-07T10:40:05.160Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/ep_engine.cc:7035:38:
error: ?cookie? was not declared in this scope
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22064/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23163/ : FAILURE

Compile error at [2022-09-07T10:38:45.159Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/ep_engine.cc:7035:38:
error: use of undeclared identifier "cookie"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23163/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22420/ : FAILURE

Compile error at [2022-09-07T10:40:19.133Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/ep_engine.cc:7035:38:
error: ?cookie? was not declared in this scope
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22420/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21390/ : FAILURE

Compile error at [2022-09-07T10:37:33.768Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/ep_engine.cc:7035:38:
error: use of undeclared identifier "cookie"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21390/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30456/ : FAILURE

Compile error at [2022-09-07T10:44:38.479Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/ep_engine.cc:7035:38:
error: use of undeclared identifier "cookie"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30456/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9898/ : FAILURE

Compile error at [2022-09-07T10:38:50.637Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/ep_engine.cc:7035:38:
error: ?cookie? was not declared in this scope
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9898/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19320/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
